[project]
name = "voiceclone"
version = "0.1.0"
description = "Qwen3-TTS 聲音複製與語音合成系統（本地部署）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.6.0",
    "openai-whisper>=20250625",
    "qwen-tts>=0.1.1",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "yt-dlp>=2025.1.15",
]

[project.scripts]
voiceclone-ui = "app:main"
